# esp32-display-orientation

./: .gitignore  Doxyfile  LICENSE  README.md  groups.dox  install.sh  uninstall.sh
.github/workflows/: doxygen-pages.yml
client/: Makefile
client/include/: log.h  main.h  netlink_monitor.h
client/source/: ap_provision.c  main.c  netlink_monitor.c
common/: CMakeLists.txt  common.c  common.h
env/: idf_env.sh.in
mcu/: CMakeLists.txt
mcu/components/BMA400_SensorAPI/: CMakeLists.txt  sensor.c  sensor.h
mcu/components/HD44780_LCD_I2C/: hd44780.c  hd44780.h  lcd.c  lcd.h
mcu/components/logging/: logging.h
mcu/components/wifi_manager/: CMakeLists.txt  wifi_mgr.c  wifi_mgr.h
mcu/docs/: README.md
mcu/docs/schematic/: wiring.md
mcu/main/: CMakeLists.txt  main.c  sdkconfig.defaults
service/: README.md  service-README.md
service/autostart/: esp_daemon-session  esp_daemon.desktop
service/systemd/: esp_daemon.service
